# resumer-scraper

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scrapy.cfg
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: Technical Specification for resumer-scraper.docx  prd.md  tasks.md
scripts/: dev.py  dev_run.py
src/resumer_scraper/: __init__.py  config.py  settings.py
src/resumer_scraper/cli/: main.py
src/resumer_scraper/items/: __init__.py  job.py
src/resumer_scraper/loaders/: __init__.py
src/resumer_scraper/pipelines/: __init__.py
src/resumer_scraper/services/: __init__.py
src/resumer_scraper/spiders/: __init__.py  outside_ir35.py
src/resumer_scraper/storage/: base.py  db.py  models.py
tests/: conftest.py  test_integration_database.py  test_selector_snapshots_outside_ir35.py  test_selector_snapshots_quality_contracts.py  test_spider_outside_ir35.py
tests/fixtures/html/: outside_ir35_jobs_list.html  quality_contracts_list.html
tests/fixtures/snapshots/: outside_ir35_jobs_list_selectors.json  quality_contracts_list_selectors.json
tests/support/: __init__.py  list_page_selectors.py
