[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resumer-scraper"
version = "0.1.0"
description = "Job ingestion platform built on Scrapy and PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.5.0",
  "scrapy>=2.11.0",
  "sqlalchemy>=2.0.36",
  "typer>=0.12.5",
]

[project.scripts]
resumer-scraper = "resumer_scraper.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires DATABASE_URL and a reachable Postgres instance",
]
